[gd_scene load_steps=9 format=2]

[ext_resource path="res://ASSETS/objects/Platformer-24-Assets/switchRed_pressed.png" type="Texture" id=1]
[ext_resource path="res://ASSETS/objects/Platformer-24-Assets/switchRed.png" type="Texture" id=2]
[ext_resource path="res://ButtonRed.gd" type="Script" id=3]
[ext_resource path="res://ASSETS/soundsandmusic/sounds/question_003.ogg" type="AudioStream" id=4]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "down",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "up",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
height = 102.667

[sub_resource type="CapsuleShape2D" id=3]
radius = 2.0
height = 16.0

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 3, 3.25 )

[node name="ButtonRed" type="StaticBody2D"]
collision_layer = 8
script = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -24 )
scale = Vector2( 0.375, 0.375 )
frames = SubResource( 1 )
animation = "up"

[node name="CollisionShapeBase" type="CollisionShape2D" parent="."]
position = Vector2( 0, -7 )
rotation = 1.5708
scale = Vector2( 0.375, 0.375 )
shape = SubResource( 2 )

[node name="CollisionShapeTop" type="CollisionShape2D" parent="."]
position = Vector2( 0, -26 )
rotation = 1.5708
shape = SubResource( 3 )

[node name="topChecker" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="topChecker"]
position = Vector2( 0, -32.75 )
shape = SubResource( 4 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = -10.0

[connection signal="body_entered" from="topChecker" to="." method="_on_topChecker_body_entered"]
[connection signal="body_exited" from="topChecker" to="." method="_on_topChecker_body_exited"]
